# snippets

./: README.md  pyproject.toml
app/: __init__.py  utils.py
app/blueprints/: auth.py  base.py
app/blueprints/api/: __init__.py  auth.py
scripts/: sql.py  test_api_key.py
sql/: schema.sql
templates/: index.jinja  layout.jinja
templates/auth/: settings.jinja  signin.jinja  signup.jinja  view_api_key.jinja
